@@ -5,4 +5,4 @@
 #
 # svn propset svn:externals -F ./EXTERNALS.TXT .
 #
-GenericSetup svn+ssh://svn.zope.org/repos/main/GenericSetup/tags/1.3.1
+GenericSetup svn+ssh://svn.zope.org/repos/main/Products.GenericSetup/tags/1.3.2/Products/GenericSetup
